infrastructure/kube-prometheus-stack/templates/discord-webhook-proxy-play-when-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-webhook-play-when
  labels:
    app: discord-webhook-proxy
    instance: play-when
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: discord-webhook-proxy
    instance: play-when
