infrastructure/kube-prometheus-stack/templates/discord-webhook-proxy-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: discord-webhook-proxy
spec:
  podSelector:
    matchLabels:
      app: discord-webhook-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: alertmanager
      ports:
        - port: http
          protocol: TCP
